--- a/css/scss/partials/_all.scss
+++ b/css/scss/partials/_all.scss
@@ -3,3 +3,7 @@
 @import 'top-bar';
 @import 'buttons';
 @import 'canvas';
+@import 'input_startpage';
+@import 'images';
+@import 'headers';
+@import 'typography';
