--- a/css/main.css
+++ b/css/main.css
@@ -30,6 +30,10 @@ blockquote:before, blockquote:after {
 q:before, q:after {
   content: '';
   content: none; }
+  
+a {
+text-decoration:none;
+}
 
 table {
   border-collapse: collapse;
@@ -215,7 +219,8 @@ input:focus {
   height: 173px;
   width: 100%;
   background: white;
-  margin-bottom: 20px; }
+  margin-bottom: 20px;
+  margin-top:-20px}
 
 .header-l-subjects-header {
   height: 50px;
@@ -274,22 +279,26 @@ body {
   margin-top: 18px; }
 
 .lecture-mode {
-  background: #0b6413;
+  background-image: url("../assets/images/lecture-mode-bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   height: calc(100vh - 173px);
   cursor: pointer;
   -webkit-transition: .3s;
           transition: .3s; }
   .lecture-mode:hover {
-    background: #16BF25; }
+    opacity: .8; }
 
 .prepare-mode {
-  background: #1d1745;
+  background-image: url("../assets/images/prepare-mode-bg.png");
+  background-size: cover;
+  background-repeat: no-repeat;
   height: calc(100vh - 173px);
   cursor: pointer;
   -webkit-transition: .3s;
           transition: .3s; }
   .prepare-mode:hover {
-    background: #3D3092; }
+    opacity: .8; }
 
 .theme-question-purple h2 {
   text-align: center;
