fixing up some css

--- a/css/scss/partials/_all.scss
+++ b/css/scss/partials/_all.scss
@@ -1,6 +1,6 @@
 // All Partials are imported into this file for ease of use
-@import 'reset';
-@import 'top-bar';
+@import 'reset'; // CSS Reset
+@import 'headers'; // Header
 @import 'buttons';
 @import 'canvas';
 @import 'input_startpage';
