--- a/css/scss/partials/_headers.scss
+++ b/css/scss/partials/_headers.scss
@@ -1,5 +1,5 @@
 // Top Bar
-#top-bar {
+#headers-top-bar {
     background: $uq-purple;
     height: 50px;
 
@@ -17,6 +17,15 @@
     height: 173px;
     width: 100%;
     background: $uq-purple;
+
+    h3 {
+        color: white;
+        text-align: center;
+        width: 100%;
+        margin-top: 10px;
+        font-weight: 100;
+        font-size: 1em;
+    }
 }
 
 // Lecturer
