cleaning up css names

--- a/css/scss/partials/_all.scss
+++ b/css/scss/partials/_all.scss
@@ -3,7 +3,7 @@
 @import 'headers'; // Header
 @import 'buttons';
 @import 'canvas';
-@import 'input_startpage';
+@import 'start_three_input';
 @import 'images';
 @import 'headers';
 @import 'typography';
