--- a/css/scss/partials/_all.scss
+++ b/css/scss/partials/_all.scss
@@ -1,7 +1,7 @@
 // All Partials are imported into this file for ease of use
 @import 'reset'; // CSS Reset
-@import 'headers'; // Header
-@import 'buttons';
+@import 'headers'; // Headers 
+@import 'buttons'; // Buttons 
 @import 'canvas';
 @import 'start_three_input';
 @import 'images';
@@ -9,3 +9,4 @@
 @import 'typography';
 @import 'theme';
 @import 'list';
+@import 'body'; // Headers 
