--- a/css/scss/partials/_theme.scss
+++ b/css/scss/partials/_theme.scss
@@ -1,5 +1,6 @@
-// ************
-// Lecture side
+.theme-lecturer-startpage-body {
+
+}
 
 // Start page
 .lecture-mode {
@@ -33,5 +34,10 @@
 		font-size: 40px;
 	}
 }
+
+.theme-lecture-start {
+
+}
+
 
 // Student side
